<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_screen_background"
        android:scaleType="centerCrop"
        android:tint="@color/background_fade"/>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_gravity="top"
        android:background="@color/toolbar_background"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <cubes.cngdrum.ui.activity.IconText
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_back"
                android:textSize="30dp"
                android:textColor="@color/icon_color"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/toolbar_logo" />
            <cubes.cngdrum.ui.activity.IconText
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_search"
                android:textSize="30dp"
                android:textColor="@color/icon_color"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
            <cubes.cngdrum.ui.activity.IconText
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_map"
                android:textSize="30dp"
                android:textColor="@color/icon_color"
                android:layout_toLeftOf="@+id/search"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
<ListView android:id="@+id/listView"
    android:divider="@color/list_item_background_transparent"
    android:dividerHeight="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"/>
</RelativeLayout>