<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_item_background_transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_item_background"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        >
        <ImageView android:id="@+id/imageView"
            android:layout_width="@dimen/list_item_image_dimen"
            android:layout_height="@dimen/list_item_image_dimen"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"/>
        <TextView android:id="@+id/title"
            android:textSize="16dp"
            android:textColor="@color/text_title_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView"
            android:text="Naslov"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>
        <TextView android:id="@+id/distance"
            android:textSize="14dp"
            android:textColor="@color/text_title_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_distance"/>
        <TextView android:id="@+id/address"
            android:textSize="14dp"
            android:textColor="@color/text_description_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toLeftOf="@+id/distanceValue"
            android:layout_below="@+id/title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="Naslov das dsa das das da"/>
        <cubes.cngdrum.ui.activity.IconText
            android:id="@+id/iconTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_toRightOf="@+id/imageView"
            android:textColor="@color/icon_color"
            android:text="@string/icon_clock"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"/>
        <TextView android:id="@+id/time"
            android:textSize="14dp"
            android:textColor="@color/text_description_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iconTime"
            android:layout_below="@+id/address"
            android:text="Naslov das dsa das das da"/>
        <cubes.cngdrum.ui.activity.IconText
            android:id="@+id/iconCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView"
            android:layout_below="@+id/time"
            android:textColor="@color/icon_color"
            android:text="@string/icon_call"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"/>
        <TextView android:id="@+id/phoneNumber"
            android:textSize="14dp"
            android:textColor="@color/text_description_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iconCall"
            android:layout_below="@+id/time"
            android:layout_marginBottom="10dp"
            android:text="+312 421 421"/>
        <TextView android:id="@+id/distanceValue"
            android:textSize="18dp"
            android:textColor="@color/text_description_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/distance"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="12 km"/>
    </RelativeLayout>

</LinearLayout>